Added descriptive comments

--- a/graph2016.html
+++ b/graph2016.html
@@ -12,10 +12,12 @@
 			<h2>Happy New Year!</h2>
 		</section>
 		
+		
 		<figure class="container">
 			<figcaption>Use mousewheel to zoom. Click and drag to pan.</figcaption>
 			<div class="view">
-				
+				<!-- JavaScript graph2016.js places the svg it generates here. 
+				Pan and zoom capability implemented in script.  -->
 			</div>
 		</figure>
 		
@@ -29,7 +31,7 @@
 			<p class="credit">Credit for the idea goes to <a href="https://plus.google.com/+PatrickHonner/posts/K7NZ2fYUZCA">Patrick Honner</a> whose image was posted to the <a href="https://www.reddit.com/r/math">math subreddit</a>.  The implementation here, including zoom and pan capability, is my own.</p>
 		</section>
 		
-		<div></div>
-		<script src="graph2016.js"></script>
+		<div></div> <!-- For padding at the bottom -->
+		<script src="graph2016.js"></script> <!-- Load script last -->
 	</body>
 </html>
